Sprint 14. add-bookings