@@ -1,5 +1,6 @@
 package ru.practicum.shareit.error;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -15,6 +16,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
+@Slf4j
 @RestControllerAdvice(annotations = RestController.class)
 public class ErrorHandler {
     @ResponseStatus(HttpStatus.NOT_FOUND)
@@ -25,20 +27,20 @@ public class ErrorHandler {
 
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     @ExceptionHandler(BadRequestException.class)
-    public Map<String, String> badRequestException(BadRequestException e) {
-        return Collections.singletonMap("badRequestException", e.getMessage());
+    public Map<String, String> badRequestException(final BadRequestException e) {
+        return Collections.singletonMap("error", e.getMessage());
     }
 
     @ResponseStatus(HttpStatus.CONFLICT)
     @ExceptionHandler(ConflictException.class)
-    public Map<String, String> conflictException(BadRequestException e) {
-        return Collections.singletonMap("conflictException", e.getMessage());
+    public Map<String, String> handleConflictException(final ConflictException e) {
+        return Map.of("conflictException", e.getMessage());
     }
 
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public Map<String, String> handleValidationExceptions(
-            MethodArgumentNotValidException ex) {
+            final MethodArgumentNotValidException ex) {
         Map<String, String> errors = new HashMap<>();
         ex.getBindingResult().getAllErrors().forEach((error) -> {
             String fieldName = ((FieldError) error).getField();
@@ -47,4 +49,5 @@ public class ErrorHandler {
         });
         return errors;
     }
+
 }
